# discord-bot

./: .gitignore  config.py  database.py  main.py  pyproject.toml  setup_logging.py  texts.py
.github/workflows/: deploy.yml
cogs/: citizens_cog.py  farm_track_cog.py  permissions_cog.py  registration_cog.py  tracks_cog.py
helpers/: autocomplete.py  citizens.py  deflate.py  discord.py  discord_formatting.py  encoding.py  formatting.py  general.py  permissions.py
models/: ShownException.py  citizen.py  duchy.py  embed_config.py  farm.py  key_value.py  permission.py  permission_group.py  person.py  registration.py  role_track.py
repositories/: citizens.py  farms_repository.py  group_permissions.py  key_values.py  people.py  permission_exceptions.py  permissions.py  registrations.py  role_tracks.py
services/: citizen_service.py  events.py  permission_service.py  registration_service.py
ui/modals/: citizen_application_modal.py  citizen_edit_modal.py  namelayer_export_modal.py  namelayer_import_modal.py  registration_duchy_modal.py  registration_embed_modal.py  registration_modal.py
ui/panels/: application_panel.py  citizens_panel.py  configured_permissions_panel.py  farms_panel.py  paginated_panel.py  permission_commands_panel.py  permission_list.py  registration_panel.py
ui/views/: citizen_management_view.py  paginated_view.py  registration_force_accept.py  registration_response_view.py  registration_view.py
